feat: add a paid Flavor

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
         free {
             applicationId 'com.udacity.gradle.builditbigger.free'
         }
+        paid {
+            applicationId 'com.udacity.gradle.builditbigger.paid'
+        }
     }
 }
 
@@ -29,10 +32,9 @@ dependencies {
     compile project(':jokeviewer')
     compile project(path: ':backend', configuration: 'android-endpoints')
     compile 'com.android.support:appcompat-v7:22.2.0'
-
-    freeCompile 'com.google.code.findbugs:jsr305:2.0.1'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
+    compile 'com.android.support:support-annotations:22.2.0'
     freeCompile 'com.google.android.gms:play-services-ads:8.1.0'
-
     androidTestCompile 'com.android.support.test:runner:0.3'
     androidTestCompile 'com.android.support.test:rules:0.3'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
