test: configure Test Task and correct test

--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,17 @@ allprojects {
         jcenter()
     }
 }
+
+task runFunctionalTest(dependsOn:[':backend:appengineRun', ':app:connectedAndroidTest',
+        ':backend:appengineStop']) {
+    tasks.getByPath(":app:connectedAndroidTest").mustRunAfter tasks.getByPath(":backend:appengineRun")
+    tasks.getByPath(":backend:appengineStop").mustRunAfter tasks.getByPath(":app:connectedAndroidTest")
+
+    evaluationDependsOn ':backend'
+
+    project(":backend") {
+        appengine {
+            daemon true
+        }
+    }
+}
